Fix: OperationPage height
OperationPage screen height was too high

--- a/frontend/src/pages/pages.css
+++ b/frontend/src/pages/pages.css
@@ -79,7 +79,7 @@
     height: 100vh;
 }
 .height_operationH {
-    height: 180vh;
+    height: 140vh;
 }
 .operation_h4 {
     font-size: 30px;
